# LEARN_PYTHON

./: pyproject.toml
quart_2/seminar_1/: seminar_1.py
quart_2/seminar_2/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
quart_2/seminar_3/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
quart_2/seminar_4/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
quart_2/seminar_5/: task_1.py  task_2.py  task_3.py  task_4.py  text1_task_1.txt
quart_2/seminar_6/: task_1.py  task_2.py
quart_2/seminar_7/my_phonebook/: README.MD  controller.py  csv_action.py  main.py  menu.py  phonebook.csv
quart_2/seminar_7/my_phonebook/fake_data/: companies.txt  names.txt  surnames.txt
quart_2/seminar_8/: README.MD  bd.sqlite  connect_sqlite.py  controller.py  create_tables.py  csv_action.py  db_action.py  logger.py  main.py  menu.py
