[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = ""
authors = ["YuBarSoft <monamurs@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
